added improved file handling

--- a/to-do.tt
+++ b/to-do.tt
@@ -1,6 +1,7 @@
 fire tab
-    user verification with user and pass
-    make json file to pull info and cross reference
+    actually make the controller
+
+
 
 calibration maker
     input data and it makes the calibration equation
