--- a/to-do.tt
+++ b/to-do.tt
@@ -12,3 +12,7 @@ convert file openers into video game like version
     revisit and make sure it works
     ensure all files function appropriately
 
+fault detection (maybe a third unit)
+    overload protection
+    voltage input
+
